[package]
name = "r126"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.25"
parking_lot = "0.12.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
opt-level = 3 # For maximum performance